# Environment

./: .gitignore  .gitmodules  CMakeLists.txt
boost/: CMakeLists.txt
cmake/cmake/: FindGLog.cmake  SetEnv.cmake
glog/: CMakeLists.txt
gtest/: CMakeLists.txt
